ClangCLへの移行とコードリファクタリング
`app.vcxproj`、`core.vcxproj`、`kernel.vcxproj`、`reflection.vcxproj`、`runtime.vcxproj`の`PlatformToolset`を`v143`から`ClangCL`に変更しました。`Entry.cs`ではエラーハンドリングとビルドタイムスタンプ解析を追加し、`Generator`オブジェクトの設定を更新しました。`Generator.cs`では、`System.Runtime.CompilerServices`のusingディレクティブを追加し、`System.Threading.Tasks`のusingディレクティブを削除しました。`Generate`メソッドの実装を変更し、ディレクトリの作成とファイル生成のロジックを追加しました。`BaseInfo.cs`、`ClassInfoOld.cs`、`FieldInfo.cs`、`FunctionInfo.cs`、`GlobalInfo.cs`、`MethodInfo.cs`、`TypeInfo.cs`、`VariableInfo.cs`、`ClangSharpExtension.cs`、`CppParser.cs`、`Util.cs`、`updateBuildTimeStampFile.bat`、`application.cpp`、`algorithm.h`、`assertion.cpp`、`assertion.h`、`log_trace.cpp`、`log_trace.h`、`stack_trace.h`、`concepts.h`、`main.cpp`、`nox_common.props`、`class_info.cpp`、`class_info.h`、`definition.h`、`details.h`、`EnumVariableInfo`、`function_info.h`、`manager.cpp`、`manager.h`、`reflection.h`、`reflection.vcxproj.filters`、`reflection_object.h`、`type.h`、`type_info.cpp`、`type_info.h`、`typeof.h`、`user_defined_compound_type_info.cpp`、`user_defined_compound_type_info.h`において、各種リファクタリングと機能追加を行いました。

--- a/runtime/property_sheet/nox_common.props
+++ b/runtime/property_sheet/nox_common.props
@@ -42,6 +42,9 @@
     <Midl>
       <WarningLevel>4</WarningLevel>
     </Midl>
+    <PreBuildEvent>
+      <Command>$(SolutionDir)bin\updateBuildTimeStampFile.bat $(ProjectName)</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
