ClangCLへの移行とビルド設定の更新
各プロジェクトファイルの`PlatformToolset`を`ClangCL`に変更しました。`nox_common.props`で`BuildStlModules`を`true`に設定し、`ScanSourceForModuleDependencies`を追加しました。`Directory.Build.targets`を新規追加し、カスタムタスク`Nox.CustomTask.Task`の設定と各構成・プラットフォームの定義を追加しました。また、`ReflectionGeneratorPreProcess`ターゲットを追加し、カスタムタスクを呼び出すようにしました。

`test_reflection.cpp`で`TestClass`のコンストラクタ位置を微調整し、`reflection_type.h`で`DestroyAt`関数の条件を変更しました。`definition.h`に`nox::reflection`名前空間を追加し、`reflect.cpp`のコメントを変更しました。`reflection_generated.vcxproj`の`PreBuildEvent`をコメントアウトし、`CustomBuildStep`を追加しました。`register.cpp`の`InitializeGen`関数内の一部コードを削除し、`stdafx.cpp`のインクルードガードを微調整しました。

--- a/runtime/property_sheet/nox_common.props
+++ b/runtime/property_sheet/nox_common.props
@@ -31,10 +31,11 @@
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <EnableModules>false</EnableModules>
       <UseStandardPreprocessor>true</UseStandardPreprocessor>
-      <BuildStlModules>false</BuildStlModules>
+      <BuildStlModules>true</BuildStlModules>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <TreatSpecificWarningsAsErrors>5030;%(TreatSpecificWarningsAsErrors)</TreatSpecificWarningsAsErrors>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <ScanSourceForModuleDependencies>false</ScanSourceForModuleDependencies>
     </ClCompile>
     <Link />
     <Lib>
