--- a/runtime/reflection_generated/reflection_generated.vcxproj
+++ b/runtime/reflection_generated/reflection_generated.vcxproj
@@ -24,18 +24,19 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>ClangCL</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>ClangCL</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Master|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>ClangCL</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <EnableUnitySupport>false</EnableUnitySupport>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -69,8 +70,12 @@
     </Link>
     <ClCompile />
     <PreBuildEvent>
-      <Command>$(SolutionDir)bin\createReflectionGenerateArgs.bat "$(SolutionDir)" "$(SolutionPath)" "$(ProjectPath)" "$(ProjectDir)reflect.cpp" "$(Configuration)" "$(Platform)" "NOX_DEBUG" "NOX_X64" "$(MSBuildBinPath)" "nox" "$(ProjectDir)" "$(SolutionDir)build\intermediate"</Command>
+      <Command>REM $(SolutionDir)bin\createReflectionGenerateArgs.bat "$(SolutionDir)" "$(SolutionPath)" "$(ProjectPath)" "$(ProjectDir)reflect.cpp" "$(Configuration)" "$(Platform)" "NOX_DEBUG" "NOX_X64" "$(MSBuildBinPath)" "nox" "$(ProjectDir)" "$(SolutionDir)build\intermediate"</Command>
     </PreBuildEvent>
+    <CustomBuildStep>
+      <Command>
+      </Command>
+    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile />
@@ -82,7 +87,7 @@
     </Link>
     <ClCompile />
     <PreBuildEvent>
-      <Command>$(SolutionDir)bin\createReflectionGenerateArgs.bat "$(SolutionDir)" "$(SolutionPath)" "$(ProjectPath)" "$(ProjectDir)reflect.cpp" "$(Configuration)" "$(Platform)" "NOX_DEBUG" "NOX_X64" "$(MSBuildBinPath)" "nox" "$(ProjectDir)" "$(SolutionDir)build\intermediate"</Command>
+      <Command>REM $(SolutionDir)bin\createReflectionGenerateArgs.bat "$(SolutionDir)" "$(SolutionPath)" "$(ProjectPath)" "$(ProjectDir)reflect.cpp" "$(Configuration)" "$(Platform)" "NOX_DEBUG" "NOX_X64" "$(MSBuildBinPath)" "nox" "$(ProjectDir)" "$(SolutionDir)build\intermediate"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Master|x64'">
@@ -95,7 +100,7 @@
     </Link>
     <ClCompile />
     <PreBuildEvent>
-      <Command>$(SolutionDir)bin\createReflectionGenerateArgs.bat "$(SolutionDir)" "$(SolutionPath)" "$(ProjectPath)" "$(ProjectDir)reflect.cpp" "$(Configuration)" "$(Platform)" "NOX_DEBUG" "NOX_X64" "$(MSBuildBinPath)" "nox" "$(ProjectDir)" "$(SolutionDir)build\intermediate"</Command>
+      <Command>REM $(SolutionDir)bin\createReflectionGenerateArgs.bat "$(SolutionDir)" "$(SolutionPath)" "$(ProjectPath)" "$(ProjectDir)reflect.cpp" "$(Configuration)" "$(Platform)" "NOX_DEBUG" "NOX_X64" "$(MSBuildBinPath)" "nox" "$(ProjectDir)" "$(SolutionDir)build\intermediate"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
