--- a/runtime/kernel/kernel.vcxproj.filters
+++ b/runtime/kernel/kernel.vcxproj.filters
@@ -276,6 +276,9 @@
     <ClInclude Include="type_traits\function_object_signature.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="easing.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="basic_definition.cpp">
@@ -528,6 +531,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="type_traits\function_object_signature.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="easing.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
